# tsck-window

./: Cargo.toml  README.md  config.ntek
examples/: cmd.rs  hk.rs  new.rs
src/: api.rs  appinfo.rs  event.rs  fibonacci_layout.rs  lib.rs  macros.rs  main.rs  wh_handler.rs  win_api.rs  window_border.rs  winhook.rs  winhook_handler.rs
src/hook/: animation.rs  api.rs  app_info.rs  app_window.rs  border.rs  color.rs  mod.rs  sys.rs  win_api.rs  win_event.rs
src/hook/overlay/: app_border.rs  color.rs  manager.rs  mod.rs  monitor_info.rs  statusbar.rs
src/overlay/: animation.rs  app_border.rs  app_info.rs  app_window.rs  color.rs  config.rs  manager.rs  mod.rs  monitor_info.rs  overlay_handler.rs  statusbar.rs  user_api.rs  widget.rs  win_api.rs  workspaces.rs
