[package]
name = "tsck-window"
version = "0.1.0"
edition = "2024"

[[example]]
name ="hk"
path = "examples/hk.rs"



[dependencies]
chrono.workspace = true
anyhow = "1.0"
flume = "0.11.1"
once_cell = "1.21.3"
parking_lot = "0.12.5"
lazy_static = "1.5.0"

windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
   "Win32_Graphics_Dwm",
   "Win32_Graphics_DirectWrite",
    "Win32_UI_Controls",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

tsck-kee = { path = "../tsck-kee" }
tsck-derive = {path="../tsck-derive"}
ntek = {path = "../../../ntek-lang/crates/ntek-lib"}
ntek-derive = {path = "../../../ntek-lang/crates/ntek-derive"}